add article, search, icons. Fix bugs

--- a/app/css/global.css
+++ b/app/css/global.css
@@ -1,146 +1,1 @@
-html {
-  box-sizing: border-box; }
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit; }
-
-html,
-body {
-  height: 100%; }
-
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%; }
-
-.content {
-  flex: 1 0 auto; }
-
-.footer {
-  flex: 0 0 auto; }
-
-body {
-  overflow-x: hidden;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.2;
-  color: #7f7f7f;
-  background-color: #d9e2eb; }
-
-.container {
-  margin: 0 auto;
-  padding: 0 15px;
-  max-width: 1230px; }
-
-img {
-  max-width: 100%;
-  display: block; }
-
-section, aside {
-  background-color: #fff;
-  box-shadow: 0px 5px 10px 0px rgba(50, 50, 50, 0.3); }
-  section:not(:last-child), aside:not(:last-child) {
-    margin-bottom: 20px; }
-
-.section-wrapper {
-  flex: 1 1 auto;
-  margin-right: 30px; }
-
-.aside-wrapper {
-  width: 50%; }
-
-article {
-  padding: 20px 30px; }
-
-aside {
-  padding: 10px 15px; }
-
-.main {
-  display: flex; }
-
-button,
-input,
-textarea {
-  font: inherit; }
-
-a {
-  text-decoration: none;
-  color: inherit;
-  transition: color 0.2s, background-color 0.2s; }
-
-a, button, input, textarea {
-  outline: transparent; }
-  a:focus, button:focus, input:focus, textarea:focus {
-    border: 1px solid #00B2A0; }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-  padding: 0; }
-
-ul,
-li {
-  margin: 0;
-  padding: 0;
-  list-style: none; }
-
-.is-outer {
-  position: relative !important;
-  left: -9999px !important; }
-
-.is-hidden {
-  display: none !important; }
-
-.error {
-  border: 2px #ff4019 solid !important; }
-
-.btn-reset {
-  padding: 0;
-  border: none;
-  background: transparent;
-  cursor: pointer; }
-
-.js-focus-visible :focus:not(.focus-visible) {
-  outline: none; }
-
-/* ================================== */
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0; }
-
-/* 
-font-family: 'Raleway', sans-serif; 600/700
-font-family: 'Roboto', sans-serif; 400/500
-*/
-.title {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 1;
-  color: #4d8dbb;
-  margin-bottom: 20px; }
-
-.menu {
-  margin-right: auto;
-  text-transform: uppercase; }
-  .menu__list {
-    display: flex; }
-  .menu__item:not(:last-child) {
-    margin-right: 25px; }
-
-/*# sourceMappingURL=global.css.map */
+html{box-sizing:border-box}*,::after,::before{box-sizing:inherit}body,html{height:100%}.wrapper{display:flex;flex-direction:column;min-height:100%}.content{flex:1 0 auto}.footer{flex:0 0 auto}body{overflow-x:hidden;font-family:Roboto,sans-serif;font-size:16px;font-weight:400;line-height:1.2;color:#7f7f7f;background-color:#d9e2eb}.container{margin:0 auto;padding:0 15px;max-width:1230px}img{max-width:100%;display:block}article,aside{background-color:#fff;box-shadow:0 5px 10px 0 rgba(50,50,50,.3)}article:not(:last-child),aside:not(:last-child){margin-bottom:20px}.main{flex:1 1 auto;margin-right:30px}.aside-wrapper{width:50%}article:not(:last-child){margin-bottom:20px}aside{padding:10px 15px}.main-wrapper{display:flex;margin-bottom:70px}button,input,textarea{font:inherit}a{text-decoration:none;color:inherit;transition:color .2s,background-color .2s}a,button,input,textarea{outline:transparent}a:focus,button:focus,input:focus,textarea:focus{border:1px solid #00b2a0}h1,h2,h3,h4,h5,h6,p{margin:0;padding:0}li,ul{margin:0;padding:0;list-style:none}.is-outer{position:relative!important;left:-9999px!important}.is-hidden{display:none!important}.error{border:2px solid #ff4019!important}.btn-reset{padding:0;border:none;background:0 0;cursor:pointer}.js-focus-visible :focus:not(.focus-visible){outline:0}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}.title{font-family:Raleway,sans-serif;font-weight:600;font-size:24px;line-height:1;color:#4d8dbb;margin-bottom:20px}.menu{margin-right:auto;text-transform:uppercase}.menu__list{display:flex}.menu__item:not(:last-child){margin-right:25px}
