--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,93 +1,1 @@
-.header {
-  margin-bottom: 25px; }
-  .header__top {
-    background-color: #4ab6f7;
-    border-bottom: 3px solid #097cc2; }
-  .header__inner {
-    position: relative;
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #fff; }
-  .header__logo {
-    margin-right: 20px; }
-  .header__social {
-    display: flex;
-    margin-right: 3.6vw; }
-  .header__item:not(:last-child) {
-    margin-right: 20px; }
-  .header__icon {
-    width: 25px;
-    height: 25px;
-    fill: #fff;
-    transition: transform 0.2s; }
-    .header__icon:hover {
-      transform: scale(1.5, 1.5); }
-  .header__profile {
-    background-color: #6cc3f8;
-    width: 40px;
-    color: inherit;
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-  .header__content {
-    background-color: #fff;
-    border-bottom: 3px solid #097cc2; }
-  .header__text {
-    padding: 10px 0;
-    min-height: 120px;
-    display: flex;
-    align-items: center; }
-  .header__title {
-    color: #4d8dbb;
-    font-family: Raleway, sans-serif;
-    font-size: 36px; }
-  .header__subtitle, .header__descr {
-    font-size: 24px;
-    color: #7f7f7f;
-    font-weight: 600; }
-  .header__descr {
-    font-size: 18px; }
-
-.news__wrapper {
-  display: flex; }
-
-.news__info {
-  max-width: 100px;
-  background-color: #f3f7fa;
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  font-size: 14px; }
-
-.news__item:not(:last-child) {
-  margin-bottom: 20px; }
-
-.news__icon {
-  width: 20px;
-  height: 20px;
-  background-color: gold; }
-
-.news__img {
-  max-width: 200px;
-  width: 100%;
-  height: 200px;
-  background-color: gold;
-  margin-right: 15px; }
-
-.news__inner {
-  display: flex; }
-
-.news__text p {
-  line-height: 1.4; }
-  .news__text p:not(:last-child) {
-    margin-bottom: 15px; }
-
-/*# sourceMappingURL=main.css.map */
+.pagination{display:flex;justify-content:flex-end}.pagination__item{min-width:30px;height:30px;border-radius:2px;box-shadow:0 2px 3px 0 rgba(50,50,50,.5)}.pagination__item:not(:last-child){margin-right:5px}.pagination__link{font-size:14px;font-weight:500;color:#8f8f8f;width:100%;height:100%;padding:5px;display:flex;justify-content:center;align-items:center;border:1px solid #ccc;background-color:#fff}.pagination__link:hover{background-color:#2f9ad0;color:#fff;border:none}.pagination__link:hover .pagination__icon{fill:#fff}.pagination__icon{width:15px;height:15px;fill:#8f8f8f}.pagination__icon--rotate{transform:rotate(180deg)}.news-card__wrapper{display:flex}.news-card__info{max-width:100px;width:100%;background-color:#f3f7fa;padding:15px 0;display:flex;flex-direction:column;justify-content:center;text-align:center;font-size:14px}.news-card__content{padding:20px 30px}.news-card__item{display:flex;flex-direction:column}.news-card__item:not(:last-child){margin-bottom:15px}.news-card__icon{width:20px;height:20px;margin:0 auto 5px;fill:#a5adb8;transition:fill .2s}.news-card__icon:hover{fill:#576379}.news-card__img{max-width:200px;width:100%;height:200px;background-color:gold;margin-right:15px}.news-card__inner{display:flex}.news-card__text p{line-height:1.4}.news-card__text p:not(:last-child){margin-bottom:15px}.search{padding:0;border-radius:5px}.search__form{position:relative;border:3px solid #4bb7f8;border-radius:inherit}.search__input{width:100%;height:35px;display:block;padding:0 50px 0 10px}.search__input::-moz-placeholder{color:#7f7f7f}.search__input:-ms-input-placeholder{color:#7f7f7f}.search__input::placeholder{color:#7f7f7f}.search__btn{cursor:pointer;background-color:#4bb7f8;border:none;position:absolute;right:0;top:0;bottom:0;width:40px;transition:background-color .2s}.search__btn:hover{background-color:#1aa3f6}.search__icon{width:15px;height:15px;fill:#fff}.header{margin-bottom:25px}.header__top{background-color:#4ab6f7;border-bottom:3px solid #097cc2}.header__inner{position:relative;padding:10px 0;display:flex;justify-content:space-between;align-items:center;color:#fff}.header__logo{margin-right:20px}.header__social{display:flex;margin-right:3.6vw}.header__item:not(:last-child){margin-right:20px}.header__icon{width:25px;height:25px;fill:#fff;transition:transform .2s}.header__icon:hover{transform:scale(1.5,1.5)}.header__profile{background-color:#6cc3f8;width:40px;color:inherit;position:absolute;right:0;top:0;bottom:0;display:flex;align-items:center;justify-content:center}.header__content{position:relative;border-bottom:3px solid #097cc2;overflow:hidden}.header__video{position:absolute;left:0;right:0;width:100%;z-index:-1;-o-object-fit:cover;object-fit:cover}.header__text{padding:10px 0;min-height:120px;display:flex;align-items:center;position:relative;z-index:10}.header__title{color:#4d8dbb;font-family:Raleway,sans-serif;font-size:36px}.header__descr,.header__subtitle{font-size:24px;color:#fff;font-weight:600}.header__descr{font-size:18px}.footer{background-color:#182631;color:#fff}.footer__inner{height:60px;display:flex;align-items:center;justify-content:space-between}
